fluxcd/infrastructure/configs/overlays/production/istio-policies/optcp-monitoring-agents/allow-graphite-exporter-loadbalancer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-graphite-exporter-loadbalancer
spec:
  selector:
    matchLabels:
      app: graphite-exporter-truenas
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              - "10.0.0.0/8"
              - "172.16.0.0/12"
              - "192.168.0.0/16"
      to:
        - operation:
            ports: ["2003"]
