fluxcd/infrastructure/configs/overlays/production/istio-policies/optcp-monitoring-agents/allow-prom-exporter-eaton-ups-loadbalancer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-prom-exporter-eaton-ups-loadbalancer
spec:
  selector:
    matchLabels:
      app: prometheus-exporter-eaton-ups
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              - "10.0.0.0/8"
              - "172.16.0.0/12"
              - "192.168.0.0/16"
      to:
        - operation:
            ports: ["9795"]
